--- a/gateways/src/main/resources/application.yml
+++ b/gateways/src/main/resources/application.yml
@@ -6,15 +6,20 @@ spring:
       mvc:
         routes:
           - id: users
-            uri: http://localhost:8083
+            uri: https://localhost:8083
             predicates:
               - Path=/api/v1/users/**
           - id: products
-            uri: http://localhost:8084
+            uri: https://localhost:8084
             predicates:
               - Path=/api/v1/products/**
 server:
   port: 8082
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: changeit
+    key-store-type: PKCS12
+    key-alias: dev-localhost
 
 eureka:
   client:
