--- a/products/src/main/resources/application.yml
+++ b/products/src/main/resources/application.yml
@@ -14,3 +14,8 @@ spring:
 
 server:
   port: 8084
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: changeit
+    key-store-type: PKCS12
+    key-alias: dev-localhost
