--- a/users/src/main/resources/application.yml
+++ b/users/src/main/resources/application.yml
@@ -22,9 +22,9 @@ application:
         expiration: 604800000 # 7 days
 server:
   port: 8083
-#  ssl:
-#    key-store: classpath:keystore.p12
-#    key-store-password: changeit
-#    key-store-type: PKCS12
-#    key-alias: dev-localhost
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-password: changeit
+    key-store-type: PKCS12
+    key-alias: dev-localhost
 
