--- a/gateways/src/main/resources/application.yml
+++ b/gateways/src/main/resources/application.yml
@@ -6,22 +6,26 @@ spring:
       mvc:
         routes:
           - id: users
-            uri: https://localhost:8083
+            uri: http://localhost:8083
             predicates:
               - Path=/api/v1/users/**
           - id: products
-            uri: https://localhost:8084
+            uri: http://localhost:8084
             predicates:
               - Path=/api/v1/products/**
 server:
   port: 8082
   ssl:
     key-store: classpath:keystore.p12
-    key-store-password: changeit
+    key-store-password: password
     key-store-type: PKCS12
-    key-alias: dev-localhost
+    key-alias: gateway
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+
+logging:
+  level:
+    org.springframework.boot.ssl: DEBUG
