--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     environment:
       - MONGO_INITDB_ROOT_USERNAME=rootuser
       - MONGO_INITDB_ROOT_PASSWORD=password
+      - MONGO_INITDB_DATABASE=letsplay
     networks:
       - backend
 
@@ -25,37 +26,85 @@ services:
     networks:
       - backend
 
-    # Users Microservice
-    users-service:
-      image: users-service:latest
-      container_name: users-service
-      build:
-        context: ./users
-      ports:
-        - 8083:8083
-      environment:
-        - SPRING_DATA_MONGODB_URI=mongodb://rootuser:password@mongodb:27017/users_db
-        - MONGO_INITDB_DATABASE=users_db
-      depends_on:
-        - mongodb
-      networks:
-        - backend
 
-    # Products Microservice
-    products-service:
-      image: products-service:latest
-      container_name: products-service
-      build:
-        context: ./products
-      ports:
-        - 8082:8082
-      environment:
-        - SPRING_DATA_MONGODB_URI=mongodb://rootuser:password@mongodb:27017/products_db
-        - MONGO_INITDB_DATABASE=products_db
-      depends_on:
-        - mongodb
-      networks:
-        - backend
+  registery:
+    build:
+      context: ./registery/
+      dockerfile: Dockerfile
+    container_name: registery
+    ports:
+      - 8761:8761
+    environment:
+      SPRING_APPLICATION_NAME: registery
+      EUREKA_INSTANCE_HOSTNAME: registery
+      EUREKA_CLIENT_FETCH_REGISTRY: "false"
+      EUREKA_CLIENT_REGISTER_WITH_EUREKA: "false"
+    networks:
+      - backend
+
+
+  gateway:
+    build:
+      context: ./gateways/
+      dockerfile: Dockerfile
+    container_name: gateways
+    ports:
+      - 8082:8082
+    environment:
+      SPRING_APPLICATION_NAME: gateways
+      EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://registery:8761/eureka/
+      SERVER_SSL_KEY_STORE: classpath:keystore.p12
+      SERVER_SSL_KEY_STORE_PASSWORD: password
+      SERVER_SSL_KEY_STORE_TYPE: PKCS12
+      SERVER_SSL_KEY_ALIAS: gateway
+    depends_on:
+      - registery
+    networks:
+      - backend
+
+  users:
+    build:
+      context: ./users/
+      dockerfile: Dockerfile
+    container_name: users-services
+    ports:
+      - 8083:8083
+    environment:
+      SPRING_DATA_MONGODB_USERNAME: rootuser
+      SPRING_DATA_MONGODB_PASSWORD: password
+      SPRING_DATA_MONGODB_DATABASE: letsplay
+      SPRING_DATA_MONGODB_PORT: 27017
+      SPRING_DATA_MONGODB_HOST: mongodb
+#      SPRING_DATA_MONGODB_AUTO_INDEX_CREATION: true
+#      SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE: admin
+
+    depends_on:
+      - mongodb
+      - registery
+      - gateway
+    networks:
+      - backend
+
+
+  products:
+    build:
+      context: ./products/
+      dockerfile: Dockerfile
+    container_name: products-services
+    ports:
+      - 8084:8084
+    environment:
+      SPRING_DATA_MONGODB_USERNAME: rootuser
+      SPRING_DATA_MONGODB_PASSWORD: password
+      SPRING_DATA_MONGODB_DATABASE: letsplay
+      SPRING_DATA_MONGODB_PORT: 27017
+      SPRING_DATA_MONGODB_HOST: mongodb
+    depends_on:
+      - mongodb
+      - registery
+      - gateway
+    networks:
+      - backend
 
 volumes:
   data: {}
